# thitcha

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  config.yaml  pyproject.toml
.ai/: instructions.md
.ai/board/: board.json
.ai/board/progress/: progress.txt
.ai/board/tasks/: 00001-project-setup.md  00002-lesson-planner.md  00003-llm-core.md  00004-cli-flow.md  00005-tool-router-file-ops.md  00006-vscode-automation.md  00007-mermaid-diagrams.md  00008-logging-trace.md  00009-demo-script.md
.ai/docs/: ai-tutor-agent-prototype-technical-blueprint.md  development-plan.md  features.md
.ai/prompts/: milhouse.txt
.ai/tools/: milhouse.sh
.ai/tools/codex/: Dockerfile  README.md
src/ai_tutor/: __init__.py  cli.py  config.py  logging_setup.py
tests/: test_cli.py
